--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,9 @@ body {
     margin: 20px;
     background-color: #f4f4f4;
 }
-h1 {color: red; }
-
+h1 {
+    color: #333;
+}
 h1 { text-align: center; }
 
 footer {
